[package]
name = "verilot"
description = "Command line tool for running and checking verifiable lotteries."
version = "0.1.0"
edition = "2018"
license = "MIT"
repository = "https://github.com/shelbyd/verilot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.9"
generic-array = "0.14"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
